--- a/src/content/docs/zh/architecture.mdx
+++ b/src/content/docs/zh/architecture.mdx
@@ -1,216 +1,523 @@
 ---
 title: 项目架构
-description: Better SaaS 项目的整体架构设计和技术选型分析
 ---
 
-# 项目架构
+# 架构概述
 
-Better SaaS 是一个基于现代化技术栈构建的全栈 SaaS 应用程序，采用 Next.js 15 和 App Router 架构，具有高度的可扩展性和可维护性。
+Better SaaS 采用现代化、可扩展的架构构建，遵循行业最佳实践。本文档深入介绍了应用程序中使用的系统设计、组件和架构模式。
 
-## 技术架构概览
+## 系统架构
 
-### 核心技术栈
+### 高级架构
 
-| 技术领域 | 技术选型 | 版本 | 说明 |
-|---------|---------|------|------|
-| **前端框架** | Next.js | 15.x | App Router 架构，支持 SSR/SSG |
-| **UI 框架** | React | 19.x | 最新版本，支持并发特性 |
-| **开发语言** | TypeScript | 5.8+ | 严格模式，类型安全 |
-| **样式系统** | Tailwind CSS | 4.0+ | 原子化 CSS，高度可定制 |
-| **UI 组件库** | Radix UI | - | 无障碍访问，高质量组件 |
-| **数据库** | PostgreSQL | - | 关系型数据库 |
-| **ORM** | Drizzle ORM | 0.41+ | 类型安全的 SQL 查询构建器 |
-| **认证系统** | Better Auth | 1.2+ | 现代化认证解决方案 |
-| **支付系统** | Stripe | 18.x | 完整的支付处理解决方案 |
-| **状态管理** | Zustand | 5.0+ | 轻量级状态管理 |
-| **国际化** | next-intl | 4.1+ | 支持中英文切换 |
-| **文档系统** | Fumadocs | 15.x | 基于 MDX 的文档生成 |
-| **代码质量** | Biome | 1.9+ | 代码格式化和检查 |
+<svg viewBox="0 0 800 400" className="w-full h-auto border rounded-lg bg-white dark:bg-gray-900">
+  <defs>
+    <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto">
+      <polygon points="0 0, 10 3.5, 0 7" fill="currentColor" />
+    </marker>
+  </defs>
+  
+  {/* Client Layer */}
+  <rect x="50" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="125" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">客户端 (Web)</text>
+  <text x="125" y="95" textAnchor="middle" className="text-sm fill-current">Next.js 应用</text>
+  <text x="125" y="115" textAnchor="middle" className="text-sm fill-current">(前端)</text>
+  
+  {/* API Gateway */}
+  <rect x="325" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="400" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">API 网关</text>
+  <text x="400" y="95" textAnchor="middle" className="text-sm fill-current">Next.js API</text>
+  <text x="400" y="115" textAnchor="middle" className="text-sm fill-current">(后端)</text>
+  
+  {/* Database */}
+  <rect x="600" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="675" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">数据库</text>
+  <text x="675" y="95" textAnchor="middle" className="text-sm fill-current">PostgreSQL</text>
+  
+  {/* CDN/Assets */}
+  <rect x="50" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="125" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">CDN/静态资源</text>
+  <text x="125" y="315" textAnchor="middle" className="text-sm fill-current">Vercel/静态</text>
+  
+  {/* External APIs */}
+  <rect x="325" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="400" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">外部 API</text>
+  <text x="400" y="315" textAnchor="middle" className="text-sm fill-current">Stripe, OAuth</text>
+  
+  {/* File Storage */}
+  <rect x="600" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="675" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">文件存储</text>
+  <text x="675" y="315" textAnchor="middle" className="text-sm fill-current">Cloudflare R2</text>
+  
+  {/* Arrows */}
+  <line x1="200" y1="90" x2="325" y2="90" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead)" />
+  <line x1="325" y1="90" x2="200" y2="90" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead)" />
+  
+  <line x1="475" y1="90" x2="600" y2="90" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead)" />
+  <line x1="600" y1="90" x2="475" y2="90" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead)" />
+  
+  <line x1="125" y1="130" x2="125" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead)" />
+  <line x1="400" y1="130" x2="400" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead)" />
+  <line x1="675" y1="130" x2="675" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead)" />
+</svg>
 
-### 架构设计模式
+### 核心组件
 
-#### 1. 分层架构 (Layered Architecture)
+#### 1. 前端层 (Next.js App Router)
+- **页面和路由**: 使用国际化路由的 App Router
+- **组件**: 基于 Radix UI 的可重用 UI 组件
+- **状态管理**: 使用 Zustand 进行客户端状态管理
+- **样式**: 使用自定义设计系统的 Tailwind CSS
+- **数据获取**: 使用 SWR 进行缓存和同步
 
-```
-┌─────────────────────────────────────┐
-│           表现层 (Presentation)      │
-│  ┌─────────────┐  ┌─────────────┐   │
-│  │   Pages     │  │ Components  │   │
-│  │ /src/app    │  │/src/components│  │
-│  └─────────────┘  └─────────────┘   │
-├─────────────────────────────────────┤
-│            业务层 (Business)         │
-│  ┌─────────────┐  ┌─────────────┐   │
-│  │  Services   │  │    Hooks    │   │
-│  │/src/db/services│ │ /src/hooks │   │
-│  └─────────────┘  └─────────────┘   │
-├─────────────────────────────────────┤
-│           数据访问层 (Data Access)    │
-│  ┌─────────────┐  ┌─────────────┐   │
-│  │Repositories │  │   Schema    │   │
-│  │/src/db/repositories│/src/db/schema││
-│  └─────────────┘  └─────────────┘   │
-├─────────────────────────────────────┤
-│            基础设施层 (Infrastructure)│
-│  ┌─────────────┐  ┌─────────────┐   │
-│  │  Database   │  │   External  │   │
-│  │ PostgreSQL  │  │   Services  │   │
-│  └─────────────┘  └─────────────┘   │
-└─────────────────────────────────────┘
-```
+#### 2. 后端层 (Next.js API Routes)
+- **API 端点**: 具有类型安全路由的 RESTful API
+- **身份认证**: 支持多提供商的 Better Auth
+- **数据库**: 使用 PostgreSQL 的 Drizzle ORM
+- **文件处理**: 安全的上传和存储管理
+- **支付处理**: 带有 Webhook 的 Stripe 集成
 
-#### 2. 模块化设计 (Modular Design)
+#### 3. 数据层
+- **数据库**: 具有优化模式的 PostgreSQL
+- **ORM**: 用于类型安全数据库操作的 Drizzle
+- **缓存**: 用于会话和数据缓存的 Redis
+- **文件存储**: 用于静态资源的 Cloudflare R2
 
-项目采用功能模块化的组织方式，每个模块负责特定的业务领域：
+## 身份认证流程
 
-- **认证模块** (`/src/lib/auth`): 用户认证和授权
-- **支付模块** (`/src/lib/stripe`): Stripe 支付集成
-- **文件管理** (`/src/lib/file-service`): 文件上传和管理
-- **权限系统** (`/src/lib/permissions`): 基于角色的权限控制
-- **国际化** (`/src/i18n`): 多语言支持
+### 多提供商身份认证
 
-#### 3. 组件化架构 (Component-Based Architecture)
+<svg viewBox="0 0 800 400" className="w-full h-auto border rounded-lg bg-white dark:bg-gray-900">
+  <defs>
+    <marker id="arrowhead2" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto">
+      <polygon points="0 0, 10 3.5, 0 7" fill="currentColor" />
+    </marker>
+  </defs>
+  
+  {/* User Login */}
+  <rect x="50" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="125" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">用户登录</text>
+  <text x="125" y="95" textAnchor="middle" className="text-sm fill-current">(邮箱/OAuth)</text>
+  
+  {/* Better Auth */}
+  <rect x="325" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="400" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">Better Auth</text>
+  <text x="400" y="95" textAnchor="middle" className="text-sm fill-current">中间件</text>
+  
+  {/* Database */}
+  <rect x="600" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="675" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">数据库</text>
+  <text x="675" y="95" textAnchor="middle" className="text-sm fill-current">会话</text>
+  
+  {/* JWT Token */}
+  <rect x="50" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="125" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">JWT 令牌</text>
+  <text x="125" y="315" textAnchor="middle" className="text-sm fill-current">生成</text>
+  
+  {/* Role-Based Access */}
+  <rect x="325" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="400" y="285" textAnchor="middle" className="text-sm font-semibold fill-current">基于角色的</text>
+  <text x="400" y="305" textAnchor="middle" className="text-sm fill-current">访问控制</text>
+  
+  {/* User Profile */}
+  <rect x="600" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="675" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">用户资料</text>
+  <text x="675" y="315" textAnchor="middle" className="text-sm fill-current">管理</text>
+  
+  {/* Arrows */}
+  <line x1="200" y1="90" x2="325" y2="90" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead2)" />
+  <line x1="475" y1="90" x2="600" y2="90" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead2)" />
+  
+  <line x1="125" y1="130" x2="125" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead2)" />
+  <line x1="400" y1="130" x2="400" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead2)" />
+  <line x1="675" y1="130" x2="675" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead2)" />
+</svg>
 
-```
-src/components/
-├── ui/                 # 基础 UI 组件
-│   ├── button.tsx
-│   ├── input.tsx
-│   └── dialog.tsx
-├── blocks/             # 业务区块组件
-│   ├── hero-section.tsx
-│   └── pricing-table.tsx
-├── dashboard/          # 仪表板组件
-├── auth-guard.tsx      # 认证守卫组件
-└── providers/          # 上下文提供者
-    ├── auth-provider.tsx
-    └── swr-provider.tsx
-```
-
-## 代码组织和模块化
-
-### 目录结构设计
-
-```
-src/
-├── app/                    # Next.js App Router
-│   ├── [locale]/          # 国际化路由
-│   │   ├── (auth)/        # 认证相关页面
-│   │   ├── (dashboard)/   # 仪表板页面
-│   │   └── docs/          # 文档页面
-│   └── api/               # API 路由
-│       ├── auth/          # 认证 API
-│       ├── stripe/        # 支付 API
-│       └── files/         # 文件 API
-├── components/            # React 组件
-├── db/                    # 数据库相关
-│   ├── schema.ts         # 数据库模式
-│   ├── repositories/     # 数据访问层
-│   ├── services/         # 业务逻辑层
-│   └── utils/            # 数据库工具
-├── lib/                   # 工具库和配置
-├── hooks/                 # 自定义 React Hooks
-├── store/                 # 状态管理
-├── types/                 # TypeScript 类型定义
-└── i18n/                  # 国际化配置
-```
-
-### 模块间耦合度分析
-
-#### 低耦合设计
-
-1. **接口隔离**: 每个模块通过明确定义的接口进行交互
-2. **依赖注入**: 通过配置文件和环境变量管理外部依赖
-3. **事件驱动**: 使用事件系统减少模块间的直接依赖
-
-#### 高内聚实现
-
-1. **功能聚合**: 相关功能集中在同一模块中
-2. **数据封装**: 每个模块管理自己的数据状态
-3. **职责单一**: 每个模块只负责特定的业务领域
-
-### 接口设计的合理性
-
-#### API 设计原则
-
-1. **RESTful 风格**: 遵循 REST 设计原则
-2. **类型安全**: 使用 TypeScript 确保类型安全
-3. **错误处理**: 统一的错误处理机制
-4. **版本控制**: 支持 API 版本管理
-
-#### 组件接口设计
-
-```typescript
-// 组件 Props 接口示例
-interface ButtonProps {
-  variant?: 'default' | 'destructive' | 'outline' | 'secondary' | 'ghost' | 'link';
-  size?: 'default' | 'sm' | 'lg' | 'icon';
-  disabled?: boolean;
-  loading?: boolean;
-  children: React.ReactNode;
-  onClick?: () => void;
-}
-```
-
-## 可扩展性和可维护性评估
-
-### 可扩展性优势
-
-1. **模块化架构**: 新功能可以作为独立模块添加
-2. **插件系统**: 支持第三方服务集成
-3. **配置驱动**: 通过配置文件控制功能开关
-4. **微服务就绪**: 架构支持未来拆分为微服务
-
-### 可维护性特点
-
-1. **代码规范**: 使用 Biome 确保代码质量
-2. **类型安全**: TypeScript 提供编译时类型检查
-3. **测试友好**: 组件和函数易于单元测试
-4. **文档完善**: 代码注释和文档齐全
-
-### 性能优化策略
-
-1. **代码分割**: Next.js 自动代码分割
-2. **图片优化**: 使用 Next.js Image 组件
-3. **缓存策略**: 多层缓存机制
-4. **懒加载**: 组件和路由懒加载
+### 身份认证功能
+- **会话管理**: 数据库持久化会话，可配置过期时间
+- **基于角色的访问控制**: 管理员、用户和自定义角色权限
+- **社交登录**: GitHub、Google OAuth 集成
+- **安全**: 密码哈希、CSRF 保护、安全 Cookie
+- **密码重置**: 基于邮箱的密码恢复流程
 
 ## 数据库设计
 
-### 数据模型设计
+### 核心表
 
-项目采用关系型数据库设计，主要包含以下核心表：
+#### 用户表
+```sql
+CREATE TABLE users (
+  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+  email VARCHAR(255) UNIQUE NOT NULL,
+  name VARCHAR(255),
+  image TEXT,
+  role VARCHAR(50) DEFAULT 'user',
+  created_at TIMESTAMP DEFAULT NOW(),
+  updated_at TIMESTAMP DEFAULT NOW()
+);
+```
 
-- **用户表** (`user`): 用户基本信息和认证数据
-- **会话表** (`session`): 用户会话管理
-- **订阅表** (`subscriptions`): Stripe 订阅信息
-- **支付表** (`payments`): 支付记录
-- **文件表** (`files`): 文件管理
-- **文章表** (`articles`): 内容管理
+#### 会话表
+```sql
+CREATE TABLE sessions (
+  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+  user_id UUID REFERENCES users(id) ON DELETE CASCADE,
+  token VARCHAR(255) UNIQUE NOT NULL,
+  expires_at TIMESTAMP NOT NULL,
+  created_at TIMESTAMP DEFAULT NOW()
+);
+```
 
-### ORM 使用策略
+#### 文件表
+```sql
+CREATE TABLE files (
+  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+  user_id UUID REFERENCES users(id) ON DELETE CASCADE,
+  filename VARCHAR(255) NOT NULL,
+  original_name VARCHAR(255) NOT NULL,
+  mime_type VARCHAR(100) NOT NULL,
+  size INTEGER NOT NULL,
+  url TEXT NOT NULL,
+  created_at TIMESTAMP DEFAULT NOW()
+);
+```
 
-使用 Drizzle ORM 的优势：
+#### 支付表
+```sql
+CREATE TABLE payments (
+  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+  user_id UUID REFERENCES users(id) ON DELETE CASCADE,
+  stripe_customer_id VARCHAR(255),
+  stripe_subscription_id VARCHAR(255),
+  status VARCHAR(50) NOT NULL,
+  plan VARCHAR(50) NOT NULL,
+  amount INTEGER NOT NULL,
+  currency VARCHAR(3) DEFAULT 'usd',
+  created_at TIMESTAMP DEFAULT NOW(),
+  updated_at TIMESTAMP DEFAULT NOW()
+);
+```
 
-1. **类型安全**: 编译时类型检查
-2. **性能优异**: 接近原生 SQL 性能
-3. **迁移管理**: 自动生成和管理数据库迁移
-4. **查询构建**: 灵活的查询构建器
+### 数据库关系
 
-## 安全性设计
+<svg viewBox="0 0 600 300" className="w-full h-auto border rounded-lg bg-white dark:bg-gray-900">
+  <defs>
+    <marker id="arrowhead3" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto">
+      <polygon points="0 0, 10 3.5, 0 7" fill="currentColor" />
+    </marker>
+  </defs>
+  
+  {/* Users */}
+  <rect x="50" y="100" width="120" height="60" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="110" y="125" textAnchor="middle" className="text-sm font-semibold fill-current">用户</text>
+  <text x="110" y="145" textAnchor="middle" className="text-xs fill-current">(1)</text>
+  
+  {/* Sessions */}
+  <rect x="250" y="50" width="120" height="60" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="310" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">会话</text>
+  <text x="310" y="95" textAnchor="middle" className="text-xs fill-current">(N)</text>
+  
+  {/* Files */}
+  <rect x="250" y="130" width="120" height="60" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="310" y="155" textAnchor="middle" className="text-sm font-semibold fill-current">文件</text>
+  <text x="310" y="175" textAnchor="middle" className="text-xs fill-current">(N)</text>
+  
+  {/* Payments */}
+  <rect x="250" y="210" width="120" height="60" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="310" y="235" textAnchor="middle" className="text-sm font-semibold fill-current">支付</text>
+  <text x="310" y="255" textAnchor="middle" className="text-xs fill-current">(N)</text>
+  
+  {/* Relationship lines */}
+  <line x1="170" y1="120" x2="250" y2="80" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead3)" />
+  <line x1="170" y1="130" x2="250" y2="160" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead3)" />
+  <line x1="170" y1="140" x2="250" y2="240" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead3)" />
+</svg>
 
-### 认证和授权
+## 文件管理架构
 
-1. **多种认证方式**: 邮箱密码、OAuth (GitHub, Google)
-2. **会话管理**: 安全的会话令牌管理
-3. **权限控制**: 基于角色的访问控制 (RBAC)
-4. **API 保护**: 中间件保护敏感 API
+### 上传流程
 
-### 数据安全
+<svg viewBox="0 0 800 400" className="w-full h-auto border rounded-lg bg-white dark:bg-gray-900">
+  <defs>
+    <marker id="arrowhead4" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto">
+      <polygon points="0 0, 10 3.5, 0 7" fill="currentColor" />
+    </marker>
+  </defs>
+  
+  {/* Client Upload */}
+  <rect x="50" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="125" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">客户端上传</text>
+  <text x="125" y="95" textAnchor="middle" className="text-sm fill-current">(表单/拖拽)</text>
+  
+  {/* API Endpoint */}
+  <rect x="325" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="400" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">API 端点</text>
+  <text x="400" y="95" textAnchor="middle" className="text-sm fill-current">/api/upload</text>
+  
+  {/* Validation */}
+  <rect x="600" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="675" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">验证</text>
+  <text x="675" y="95" textAnchor="middle" className="text-sm fill-current">大小/类型</text>
+  
+  {/* File Storage */}
+  <rect x="50" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="125" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">文件存储</text>
+  <text x="125" y="315" textAnchor="middle" className="text-sm fill-current">(R2/S3)</text>
+  
+  {/* Database */}
+  <rect x="325" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="400" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">数据库</text>
+  <text x="400" y="315" textAnchor="middle" className="text-sm fill-current">元数据</text>
+  
+  {/* Response */}
+  <rect x="600" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="675" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">响应</text>
+  <text x="675" y="315" textAnchor="middle" className="text-sm fill-current">URL/状态</text>
+  
+  {/* Arrows */}
+  <line x1="200" y1="90" x2="325" y2="90" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead4)" />
+  <line x1="475" y1="90" x2="600" y2="90" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead4)" />
+  
+  <line x1="125" y1="130" x2="125" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead4)" />
+  <line x1="400" y1="130" x2="400" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead4)" />
+  <line x1="675" y1="130" x2="675" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead4)" />
+</svg>
 
-1. **输入验证**: 使用 Zod 进行数据验证
-2. **SQL 注入防护**: ORM 自动防护
-3. **XSS 防护**: React 自动转义
-4. **CSRF 防护**: 内置 CSRF 保护
+### 文件管理功能
+- **安全上传**: 验证、大小限制和类型限制
+- **图像处理**: 缩略图生成和优化
+- **访问控制**: 基于用户的文件权限
+- **云存储**: 与 Cloudflare R2/AWS S3 集成
+- **元数据跟踪**: 文件信息和使用分析
 
-这个架构设计确保了项目的高质量、可扩展性和可维护性，为构建现代化的 SaaS 应用提供了坚实的基础。
+## 支付系统架构
+
+### Stripe 集成
+
+<svg viewBox="0 0 800 400" className="w-full h-auto border rounded-lg bg-white dark:bg-gray-900">
+  <defs>
+    <marker id="arrowhead5" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto">
+      <polygon points="0 0, 10 3.5, 0 7" fill="currentColor" />
+    </marker>
+  </defs>
+  
+  {/* Checkout Flow */}
+  <rect x="50" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="125" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">结账流程</text>
+  <text x="125" y="95" textAnchor="middle" className="text-sm fill-current">(前端)</text>
+  
+  {/* Stripe API */}
+  <rect x="325" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="400" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">Stripe API</text>
+  <text x="400" y="95" textAnchor="middle" className="text-sm fill-current">(支付)</text>
+  
+  {/* Webhook */}
+  <rect x="600" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="675" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">Webhook</text>
+  <text x="675" y="95" textAnchor="middle" className="text-sm fill-current">处理程序</text>
+  
+  {/* Subscription */}
+  <rect x="50" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="125" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">订阅管理</text>
+  <text x="125" y="315" textAnchor="middle" className="text-sm fill-current"></text>
+  
+  {/* Database */}
+  <rect x="325" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="400" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">数据库</text>
+  <text x="400" y="315" textAnchor="middle" className="text-sm fill-current">更新</text>
+  
+  {/* Email */}
+  <rect x="600" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="675" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">邮件</text>
+  <text x="675" y="315" textAnchor="middle" className="text-sm fill-current">通知</text>
+  
+  {/* Arrows */}
+  <line x1="200" y1="90" x2="325" y2="90" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead5)" />
+  <line x1="475" y1="90" x2="600" y2="90" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead5)" />
+  
+  <line x1="125" y1="130" x2="125" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead5)" />
+  <line x1="400" y1="130" x2="400" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead5)" />
+  <line x1="675" y1="130" x2="675" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead5)" />
+</svg>
+
+### 支付功能
+- **订阅管理**: 多种计划和计费周期
+- **Webhook 处理**: 实时支付事件处理
+- **发票生成**: 自动计费和收据
+- **试用期**: 可配置的免费试用功能
+- **支付恢复**: 失败支付重试逻辑
+
+## 测试架构
+
+### 测试结构
+- **单元测试**: 组件逻辑和工具函数
+- **集成测试**: API 端点和数据库操作
+- **E2E 测试**: 完整的用户工作流程和场景
+- **视觉测试**: UI 一致性的截图比较
+- **性能测试**: 负载测试和优化
+
+## 国际化架构
+
+### i18n 结构
+
+<svg viewBox="0 0 800 400" className="w-full h-auto border rounded-lg bg-white dark:bg-gray-900">
+  <defs>
+    <marker id="arrowhead6" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto">
+      <polygon points="0 0, 10 3.5, 0 7" fill="currentColor" />
+    </marker>
+  </defs>
+  
+  {/* Route Locale */}
+  <rect x="50" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="125" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">路由语言</text>
+  <text x="125" y="95" textAnchor="middle" className="text-sm fill-current">[locale]/</text>
+  
+  {/* Message Resolution */}
+  <rect x="325" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="400" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">消息</text>
+  <text x="400" y="95" textAnchor="middle" className="text-sm fill-current">解析</text>
+  
+  {/* Content Rendering */}
+  <rect x="600" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="675" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">内容</text>
+  <text x="675" y="95" textAnchor="middle" className="text-sm fill-current">渲染</text>
+  
+  {/* Language Detection */}
+  <rect x="50" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="125" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">语言</text>
+  <text x="125" y="315" textAnchor="middle" className="text-sm fill-current">检测</text>
+  
+  {/* Translation Files */}
+  <rect x="325" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="400" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">翻译</text>
+  <text x="400" y="315" textAnchor="middle" className="text-sm fill-current">文件</text>
+  
+  {/* Localized Components */}
+  <rect x="600" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="675" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">本地化</text>
+  <text x="675" y="315" textAnchor="middle" className="text-sm fill-current">组件</text>
+  
+  {/* Arrows */}
+  <line x1="200" y1="90" x2="325" y2="90" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead6)" />
+  <line x1="475" y1="90" x2="600" y2="90" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead6)" />
+  
+  <line x1="125" y1="130" x2="125" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead6)" />
+  <line x1="400" y1="130" x2="400" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead6)" />
+  <line x1="675" y1="130" x2="675" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead6)" />
+</svg>
+
+### i18n 功能
+- **基于路由的本地化**: 自动语言检测
+- **消息管理**: 集中化翻译文件
+- **动态内容**: 运行时语言切换
+- **SEO 优化**: 本地化元标签和 URL
+- **回退处理**: 默认语言回退
+
+## 安全架构
+
+### 安全层
+
+1. **应用程序安全**
+   - 使用令牌的 CSRF 保护
+   - 使用清理的 XSS 防护
+   - 使用 ORM 的 SQL 注入保护
+   - API 端点的速率限制
+
+2. **身份认证安全**
+   - 安全密码哈希 (bcrypt)
+   - JWT 令牌验证
+   - 使用安全 Cookie 的会话管理
+   - OAuth 提供商集成
+
+3. **数据安全**
+   - 数据库静态加密
+   - 安全文件上传验证
+   - 环境变量保护
+   - API 密钥管理
+
+4. **基础设施安全**
+   - HTTPS 强制执行
+   - 安全头部 (CSP, HSTS)
+   - 依赖漏洞扫描
+   - 定期安全更新
+
+## 性能优化
+
+### 前端优化
+- **代码分割**: 动态导入和基于路由的分割
+- **图像优化**: 使用 WebP 的 Next.js Image 组件
+- **缓存**: 浏览器缓存和 CDN 优化
+- **包分析**: Tree shaking 和死代码消除
+
+### 后端优化
+- **数据库索引**: 优化查询和索引
+- **API 缓存**: 使用 Redis 的响应缓存
+- **连接池**: 数据库连接优化
+- **懒加载**: 按需资源加载
+
+## 部署架构
+
+### 生产部署
+
+<svg viewBox="0 0 800 400" className="w-full h-auto border rounded-lg bg-white dark:bg-gray-900">
+  <defs>
+    <marker id="arrowhead7" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto">
+      <polygon points="0 0, 10 3.5, 0 7" fill="currentColor" />
+    </marker>
+  </defs>
+  
+  {/* GitHub Repo */}
+  <rect x="50" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="125" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">GitHub 仓库</text>
+  <text x="125" y="95" textAnchor="middle" className="text-sm fill-current">(源代码)</text>
+  
+  {/* Vercel */}
+  <rect x="325" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="400" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">Vercel</text>
+  <text x="400" y="95" textAnchor="middle" className="text-sm fill-current">(构建/部署)</text>
+  
+  {/* Production */}
+  <rect x="600" y="50" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="675" y="75" textAnchor="middle" className="text-sm font-semibold fill-current">生产</text>
+  <text x="675" y="95" textAnchor="middle" className="text-sm fill-current">环境</text>
+  
+  {/* CI/CD */}
+  <rect x="50" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="125" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">CI/CD</text>
+  <text x="125" y="315" textAnchor="middle" className="text-sm fill-current">流水线</text>
+  
+  {/* Environment Variables */}
+  <rect x="325" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="400" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">环境</text>
+  <text x="400" y="315" textAnchor="middle" className="text-sm fill-current">变量</text>
+  
+  {/* Monitoring */}
+  <rect x="600" y="270" width="150" height="80" rx="8" fill="none" stroke="currentColor" strokeWidth="2" />
+  <text x="675" y="295" textAnchor="middle" className="text-sm font-semibold fill-current">监控</text>
+  <text x="675" y="315" textAnchor="middle" className="text-sm fill-current">& 分析</text>
+  
+  {/* Arrows */}
+  <line x1="200" y1="90" x2="325" y2="90" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead7)" />
+  <line x1="475" y1="90" x2="600" y2="90" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead7)" />
+  
+  <line x1="125" y1="130" x2="125" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead7)" />
+  <line x1="400" y1="130" x2="400" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead7)" />
+  <line x1="675" y1="130" x2="675" y2="270" stroke="currentColor" strokeWidth="2" markerEnd="url(#arrowhead7)" />
+</svg>
+
+### 部署功能
+- **自动化部署**: GitHub Actions CI/CD 流水线
+- **环境管理**: 测试和生产环境
+- **健康监控**: 应用程序性能监控
+- **回滚功能**: 部署问题的快速回滚
+- **可扩展性**: 基于流量的自动扩展
+
+## 监控与分析
+
+### 应用程序监控
+- **错误跟踪**: 实时错误监控和警报
+- **性能指标**: 响应时间和资源使用
+- **用户分析**: 用户行为和参与度跟踪
+- **业务指标**: 收入、转化率和增长指标
+
+这种架构为构建可扩展、安全和可维护的 SaaS 应用程序提供了坚实的基础。模块化设计允许根据特定业务需求轻松扩展和自定义。
